# maho-mh400e-config

./: .clang-format  .clang-tidy  .gitignore  .gitlint  CMakeLists.txt  Makefile  README  README.md  install.sh  linuxcnc.ini  lube_pump.py  maho_mh400e.hal  maho_mh400e.ini  maho_mh400e_postgui.hal  mh400e_spindle.comp  noxfile.py  pyproject.toml  qtdragon_hd.pref  ruff.toml  tool.tbl
Components/: project.yml
Components/src/Calculate/: calculate_logic.c  calculate_logic.h
Components/src/Gearbox/: gearbox_logic.c  gearbox_logic.h  mh400e_common.h  mh400e_gearbox.comp  mh400e_gearbox_sim.comp  mh400e_gears.c  mh400e_gears.h  mh400e_twitch.c  mh400e_twitch.h  mh400e_util.c  mh400e_util.h  supported_speeds.c  supported_speeds.h
Components/src/Lubrication/: lubrication.comp  lubrication_logic.c  lubrication_logic.h
Components/src/Spindle/: mh400e_spindle.comp
Components/test/Calculate/: test_calculate_logic.c
Components/test/Gearbox/: test_gearbox_needs_reverse.c  test_get_target_state.c  test_should_slow_down.c  test_supported_speeds.c
Components/test/Lubrication/: test_lubrication_logic.c  test_lubrication_logic_building_pressure.c  test_lubrication_logic_disabled.c  test_lubrication_logic_disabled_in_config.c  test_lubrication_logic_from_disabled_state.c  test_lubrication_logic_from_idle_state.c  test_lubrication_logic_initializing.c  test_lubrication_logic_lubricating.c  test_lubrication_logic_motion_disabled.c
components/src/: calculate.comp
components/src/calculate/: calculate.comp
components/src/lubrication/: lubrication_logic.c
components/tests/: test_calculate.py
components/tests/calculate/: test_calculate.py
components/tests/lubrication/: test_lubrication_logic.py
hallib/: maho_mh400e.hal  maho_mh400e_postgui.hal
lubrication/: controller.py  pyproject.toml
lubrication/src/lubrication/: controller.py  main.py  utils.py
lubrication/src/lubrication/adapters/: interfaces.py  linuxcnc.py
lubrication/tests/: test_axis_motion_tracker.py  test_controller.py  test_lubrication_timer.py  test_utils.py
qtvcp/screens/qtdragon_hd/: qtdragon_hd.ui
tools/gitlint/rules/: imperative_mood_title.py  title_starts_with_capital.py
