[project]
name = "maho-mh400e-config"
version = "0.1.0"
description = ""
authors = [
    {name = "Johan Vergeer",email = "johanvergeer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hal (>=0.0.3,<0.0.4)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
