[project]
name = "lubrication"
version = "0.1.0"
description = ""
authors = [
    {name = "Johan Vergeer",email = "johanvergeer@gmail.com"}
]
requires-python = ">=3.11"
dependencies = []

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
